Tweaks - spacing fix and image gallery splay/hover

--- a/client/static/styles/main.scss
+++ b/client/static/styles/main.scss
@@ -198,7 +198,7 @@ body {
 }
 
 .image-gallery {
-  --splay: 30deg / var(--no-images);
+  --splay: 35deg / var(--no-images);
 }
 
 .image {
@@ -212,7 +212,7 @@ body {
 }
 
 .image:hover {
-  transform: translateX(1rem) translateY(-3rem) rotate(calc(var(--index) * var(--splay)));
+  transform: translateX(calc(var(--index) * 3.5rem / var(--no-images))) translateY(-5rem) rotate(calc((var(--index) + 0.75) * var(--splay)));
   filter: brightness(1);
 }
 
